2009-06-08  vadim  <vadim@vk.crocodile.org>

	* NATCompiler.cpp (classifyNATRule::processNext): rules that
	translate only source port are now classified as SNAT, rules that
	translate only dest. port are classified as DNAT. Rules that try
	to translate one service type into another cause exception

2009-06-03  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (recursiveGroupsInRE::isRecursiveGroup): fixed bug
	#2800625 "recursive groups cause infinite loop and crash in
	compiler". When a group included itself, compiler used to go
	into infinite loop and crash.

2009-05-28  vadim  <vadim@vk.crocodile.org>

	* InterfaceData.cpp (InterfaceData::guessSecurityLevel): set
	security level to 0 (insecure) by default. This makes all
	interfaces of the newly created firewall be "external" or
	"insecure" unless they were assigned labels or addresses from the
	private address space in which case guessSecurityLevel() assigns
	level 100. This addresses bug #2796760 "Display error when adding
	new FW with multiple interfaces".

2009-05-27  vadim  <vadim@vk.crocodile.org>

	* XMLTools.cpp (XMLTools::version_compare): made it possible to
	compare version strings with different number of components.

2009-04-20  vadim  <vadim@vk.crocodile.org>

	* RuleElement.cpp: Additional validation to make sure Inteval
	objects are not allowed in rule elements except for the
	RuleElementInterval

2009-04-09  vadim  <vadim@vk.crocodile.org>

	* VERSION: start v3.0.5

2009-04-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* v3.0.4 released, merged to the trunk, this comment is r256

2009-03-29  vadim  <vadim@vk.crocodile.org>

	* v3.0.4 release

2009-03-25  vadim  <vadim@vk.crocodile.org>

	* RuleElement.cpp (RuleElementTSrv::validateChild): fixed bug
	#2712575: "NAT RuleSetView allows TagService to be in Translated
	Svc". TagService object should not be allowed in "Translated
	Service" in NAT rules.

2009-02-21  vadim  <vadim@vk.crocodile.org>
